2001-06-21  Philip Blundell  <philb@gnu.org>

	* config/tc-arm.c (cplong_flag): Rename to long_flag.  All uses
	updated.
	(insns): Remove entry for adrl.  Add long_flag for adr.
	(do_adr): Handle `l' suffix.
	(do_adrl): Delete.

2001-06-21  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-hppa.c (CHECK_FIELD_WHERE): Define.
	(md_apply_fix): Use it here.  Replace printf with equivalent
	as_bad_where.
	(tc_gen_reloc): Use as_bad_where instead of as_bad.
	(md_apply_fix): Here too.
	* config/tc-i386.c (tc_gen_reloc): Use as_bad_where instead of as_bad.
	* config/tc-m68k.c (tc_gen_reloc): Likewise.
	(md_convert_frag_1): Likewise.

2000-06-20  Tom Rix <trix@redhat.com>

	* config/tc-ppc.c (ppc_comm): Change default alignment to 4 bytes.

2001-06-18  H.J. Lu <hjl@gnu.org>

        * doc/Makefile.am (info): Depend on $(MANS).
        (as.1): Remove the prefix `$(srcdir)/'.
        * doc/Makefile.in: Regenerated.

        * as.1: Removed.

2001-06-18  Philip Blundell  <philb@gnu.org>

	* config/tc-arm.c (do_msr): Remove restriction on usage of
	immediate operands.

2001-06-19  Alan Modra  <amodra@bigpond.net.au>

	* dwarf2dbg.c (dwarf2_finish): Output file info even when no
	line info.

2001-06-13  Philip Blundell  <philb@gnu.org>

	* config/tc-arm.c (thumb_shift): Improve wording of error message.
	(do_t_arit): Likewise.

2001-06-13  Nick Clifton  <nickc@cambridge.redhat.com>

	* config/tc-sh.c (md_pseudo_table): Only intercept the .file and
	.loc pseudos if the dfwarf2 functions are available.
	(md_assemble): Only call dwarf2_emit_insn if it is available.

	* expr.c: Fix typo in comment.

2001-06-12  Nick Clifton  <nickc@cambridge.redhat.com>

	* doc/as.texinfo (Infix Ops): Document that comparison and
	combiner operators can be used as infix operators.

2001-06-12  Peter Jakubek <pjak@snafu.de>

	* gas/config/tc-m68k.c (parse_mri_control_operand): Fix handling
        of AND/OR.
        (swap_mri_condition): Add HS (alias fo CC) and LO (alias for CS).